force-app/main/default/objects/FieloPLT__Library__c/FieloPLT__Library__c.object-meta.xml
<CustomObject>
    <description>A Library is a stack which extends Fielo functionality. It comprises Actions, Models and Page Settings.</description>
    <label>Library</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>