force-app/main/default/objects/FieloPLT__Library__c/fields/FieloPLT__ExportResources__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExportResources__c</fullName>
    <description>JSON string that refers to the Static Resource where the Export Point is defined. JSON string must be follow the format in this example: {&quot;ExportPointName&quot;: &quot;ExportConfigObjectName&quot;}.</description>
    <inlineHelpText>Enter the JSON string that refers to the Static Resource where the Export Point is defined. JSON string must be follow the format in this example: {&quot;ExportPointName&quot;: &quot;ExportConfigObjectName&quot;}.</inlineHelpText>
    <label>Export Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>