force-app/main/default/objects/FieloPLT__Library__c/fields/FieloPLT__ResourceId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ResourceId__c</fullName>
    <description>Custom setting ID with Library information.</description>
    <inlineHelpText>Custom setting ID with Library information.</inlineHelpText>
    <label>Resource ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>