force-app/main/default/objects/FieloPLT__Library__c/fields/FieloPLT__Version__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Version__c</fullName>
    <description>Current active Library version number.</description>
    <inlineHelpText>Current active Library version number.</inlineHelpText>
    <label>Version</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>